--- a/src/Snebur.VisualStudio2022/ToolWindows/Migracao/MigrationWindowControl.xaml
+++ b/src/Snebur.VisualStudio2022/ToolWindows/Migracao/MigrationWindowControl.xaml
@@ -29,7 +29,7 @@
     <Grid Margin="10">
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="113"/>
+            <RowDefinition Height="140"/>
             <RowDefinition/>
             <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
@@ -41,7 +41,7 @@
                     <ColumnDefinition/>
                     <ColumnDefinition Width="30"/>
                 </Grid.ColumnDefinitions>
-                
+
                 <ComboBox Name="CmbProjetoMigracao" ItemsSource="{Binding Projetos }"  SelectionChanged="ComboBox_SelectionChanged"  DisplayMemberPath="Name">
                 </ComboBox>
                 <Button  Click="BtnAtualizarProjeots_Click" Grid.Column="1"  Margin="5 0 0 0">
@@ -55,19 +55,26 @@
             <Grid >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
-                    <ColumnDefinition Width="600"/>
+                    <ColumnDefinition />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="30"/>
+                    <RowDefinition Height="30"/>
                 </Grid.RowDefinitions>
                 <!--<CheckBox Margin="10 5" Name="ChkProducao" VerticalAlignment="Center">-->
-                    
-                    <!--<TextBlock Foreground="Green">Produção</TextBlock>-->
+
+                <!--<TextBlock Foreground="Green">Produção</TextBlock>-->
                 <!--</CheckBox>-->
-                <ComboBox DisplayMemberPath="Nome"   VerticalAlignment="Center" ItemsSource="{Binding Ambientes}" SelectedItem="{Binding AmbienteSelecionado}"></ComboBox>
+                <ComboBox DisplayMemberPath="Nome" VerticalAlignment="Center" ItemsSource="{Binding Ambientes}" SelectedItem="{Binding AmbienteSelecionado}"></ComboBox>
+                <CheckBox x:Name="ChkIsCompilar" VerticalAlignment="Center"   Grid.Column="1" 
+                          HorizontalAlignment="Right"  Margin="10 0"
+                          Foreground="{DynamicResource {x:Static vsshell:VsBrushes.WindowTextKey}}">Compilar</CheckBox>
                 <!--<ComboBox DisplayMemberPath="Nome" ItemsSource="{Binding Ambientes}" SelectedItem="{Binding AmbienteSelecionado}"></ComboBox>-->
 
-                <StackPanel Orientation="Horizontal" Grid.Column="1" HorizontalAlignment="Right">
+                <StackPanel Grid.ColumnSpan="2" 
+                            Grid.Row="1" 
+                            Orientation="Horizontal" 
+                            HorizontalAlignment="Right">
                     <Button Name="BtnValidar"  VerticalAlignment="Center" HorizontalAlignment="Right" Width="120" Height="22" Click="BtnValidacaoAssembly_Click">Validar</Button>
                     <Button   Name="BtnAdicionarMigracao"  Margin="10 0 0 0"  VerticalAlignment="Center" HorizontalAlignment="Right" Width="120" Height="22" Click="BtnAdidioncarMigracao_Click">Adicionar migracao</Button>
                     <Button  Margin="10 0 0 0" VerticalAlignment="Center" HorizontalAlignment="Right" Width="120" Height="22" Click="BtnAtualizar_Click">Atualizar</Button>
@@ -101,8 +108,13 @@
 
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock FontSize="13" FontFamily="Lucida Console"
-                                   TextWrapping="NoWrap" Text="{Binding Mensagem}" Foreground="{Binding BrushColor}"></TextBlock>
+                        <TextBox FontSize="13" FontFamily="Lucida Console"
+                                 TextWrapping="NoWrap" 
+                                 Text="{Binding Mensagem, Mode=OneWay}" 
+                                 Background="Transparent"
+                                 BorderThickness="0" 
+                                 IsReadOnly="True"
+                                 Foreground="{Binding BrushColor}"></TextBox>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
