--- a/src/Snebur.VisualStudio2022/ToolWindows/Output/OutputWindowControl.xaml
+++ b/src/Snebur.VisualStudio2022/ToolWindows/Output/OutputWindowControl.xaml
@@ -3,12 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             Background="{DynamicResource VsBrush.Window}"
-             Foreground="{DynamicResource VsBrush.WindowText}"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="800"
-             Name="MyToolWindow">
-
+             Name="MyToolWindow"
+             Background="{DynamicResource VsBrush.Window}"
+             Foreground="{DynamicResource VsBrush.WindowText}">
 
     <Grid Margin="5">
         <Grid.RowDefinitions>
