--- a/src/Snebur.VisualStudio2022/ToolWindows/Output/OutputWindowControl.xaml
+++ b/src/Snebur.VisualStudio2022/ToolWindows/Output/OutputWindowControl.xaml
@@ -18,7 +18,7 @@
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
-                <ColumnDefinition Width="700"/>
+                <ColumnDefinition Width="1200"/>
             </Grid.ColumnDefinitions>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
@@ -35,13 +35,19 @@
                 <!--<Button x:Name="BtnFormatarTodosDocumentos" Content="Formatar todos documentos" Click="BtnFormatarTodosDocumentos_Click" Width="170" />-->
 
                 <Button x:Name="BtnHtmlIntellisense" Grid.Column="1" Content="IntelliSense" 
-                        Click="BtnHtmlIntellisense_Click" Width="120" 
+                        Click="BtnHtmlIntellisense_Click" Width="100" 
                         Margin="5 0 0 0"/>
 
-                <Button x:Name="BtnNovoString" 
+                <!--<Button x:Name="BtnNovoString" 
                         Content="Str.Format" 
                         Width="100"
                         Click="BtnFormatarStringFormat_Click" 
+                        Margin="5 0 0 0" />-->
+
+                <Button x:Name="BtnNovoString" 
+                        Content="Delete bin e obj" 
+                        Width="100"
+                        Click="BtnDeletarBinAndObj_Click" 
                         Margin="5 0 0 0" />
 
                 <Button x:Name="BtnLimpar" Content="Limpar" Click="BtnLimpar_Click" Width="100"   Margin="5 0 0 0" />
