--- a/src/Snebur.VisualStudio2022/ToolWindows/Output/OutputWindowControl.xaml
+++ b/src/Snebur.VisualStudio2022/ToolWindows/Output/OutputWindowControl.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="800"
+             d:DesignHeight="300" d:DesignWidth="1200"
              Name="MyToolWindow"
              Background="{DynamicResource VsBrush.Window}"
              Foreground="{DynamicResource VsBrush.WindowText}">
@@ -18,7 +18,7 @@
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
-                <ColumnDefinition Width="1200"/>
+                <ColumnDefinition Width="850"/>
             </Grid.ColumnDefinitions>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
@@ -30,7 +30,7 @@
 
 
 
-            <StackPanel  Grid.Column="1"  Orientation="Horizontal" HorizontalAlignment="Right" >
+            <StackPanel  Grid.Column="1"  Orientation="Horizontal" HorizontalAlignment="Right"  >
 
                 <!--<Button x:Name="BtnFormatarTodosDocumentos" Content="Formatar todos documentos" Click="BtnFormatarTodosDocumentos_Click" Width="170" />-->
 
@@ -56,7 +56,7 @@
                         Content="Iniciar depuração" Click="BtnIniciarPararServicoDepuracao_Click" Width="120" Margin="5 0 0 0"/>
                 <!--<Button x:Name="BtnParaServicoDepuracao" Content="Parar decuparacao" Click="BtnReiniciarServicoDepuracao_Click" Width="120" Margin="10 0 0 0"  Visibility="Collapsed"  />-->
 
-                <Button x:Name="BtnReiniciar" Content="Reiniciar gerenciador" Click="BtnReiniciarGerenciadorProjetosTS_Click"
+                <Button x:Name="BtnReiniciar" Content="Reiniciar" Click="BtnReiniciarGerenciadorProjetosTS_Click"
                         Width="130"   Margin="5 0 0 0"/>
 
                 <Button x:Name="BtnNormalizar" Grid.Column="1" Content="Normalizar projetos" Click="BtnNormalizar_Click" Width="120" 
@@ -71,12 +71,13 @@
 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="177*"/>
-                <ColumnDefinition Width="128*"/>
-                <ColumnDefinition Width="90*"/>
+                <ColumnDefinition Width="135*"/>
+                <ColumnDefinition Width="219*"/>
+                <ColumnDefinition Width="256*"/>
+                <ColumnDefinition Width="180*"/>
             </Grid.ColumnDefinitions>
 
-            <ScrollViewer x:Name="ScrollLog" HorizontalScrollBarVisibility="Visible"  VerticalScrollBarVisibility="Visible" Grid.ColumnSpan="3">
+            <ScrollViewer x:Name="ScrollLog" HorizontalScrollBarVisibility="Visible"  VerticalScrollBarVisibility="Visible" Grid.ColumnSpan="4">
 
                 <ItemsControl 
                           Margin="5" ItemsSource="{Binding Logs}"  
