--- a/src/Snebur.VisualStudio2022/ToolWindows/Migracao/MigrationWindowControl.xaml
+++ b/src/Snebur.VisualStudio2022/ToolWindows/Migracao/MigrationWindowControl.xaml
@@ -6,7 +6,7 @@
              xmlns:vsshell="clr-namespace:Microsoft.VisualStudio.Shell;assembly=Microsoft.VisualStudio.Shell.15.0"
              mc:Ignorable="d"
              d:DesignHeight="400" d:DesignWidth="800"
-             Width="800" Height="400"
+             MinWidth="800" MinHeight="400"
              Name="MyToolWindow"
              Background="{DynamicResource VsBrush.Window}"
              Foreground="{DynamicResource VsBrush.WindowText}">
