--- a/src/Snebur.VisualStudio2022/ToolWindows/Migracao/MigrationWindowControl.xaml
+++ b/src/Snebur.VisualStudio2022/ToolWindows/Migracao/MigrationWindowControl.xaml
@@ -10,8 +10,8 @@
              Name="MyToolWindow"
              Background="{DynamicResource VsBrush.Window}"
              Foreground="{DynamicResource VsBrush.WindowText}">
-             
-  
+
+
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -44,18 +44,19 @@
                     <ColumnDefinition Width="30"/>
                 </Grid.ColumnDefinitions>
 
-                <ComboBox Name="CmbProjetoMigracao" ItemsSource="{Binding Projetos }"  SelectionChanged="ComboBox_SelectionChanged"  DisplayMemberPath="Name">
+                <ComboBox Name="CmbProjetoMigracao" ItemsSource="{Binding ProjetosMigracao }"  SelectionChanged="ComboBox_SelectionChanged"  DisplayMemberPath="Name">
                 </ComboBox>
                 <Button  Click="BtnAtualizarProjeots_Click" Grid.Column="1"  Margin="5 0 0 0">
                     ...</Button>
             </Grid>
 
             <TextBlock Text="Selecione o projeto das entidades"></TextBlock>
-            <ComboBox Name="CmbProjetosEntidades" ItemsSource="{Binding Projetos }"   DisplayMemberPath="Name">
+            <ComboBox Name="CmbProjetosEntidades" ItemsSource="{Binding ProjetosEntidades }"   DisplayMemberPath="Name">
             </ComboBox>
 
             <Grid >
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
                     <ColumnDefinition/>
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
@@ -67,10 +68,22 @@
 
                 <!--<TextBlock Foreground="Green">Produção</TextBlock>-->
                 <!--</CheckBox>-->
-                <ComboBox DisplayMemberPath="Nome" VerticalAlignment="Center" ItemsSource="{Binding Ambientes}" SelectedItem="{Binding AmbienteSelecionado}"></ComboBox>
-                <CheckBox x:Name="ChkIsCompilar" VerticalAlignment="Center"   Grid.Column="1" 
-                          HorizontalAlignment="Right"  Margin="10 0"
+                <ComboBox DisplayMemberPath="Nome"
+                          VerticalAlignment="Center"
+                          ItemsSource="{Binding Ambientes}" SelectedItem="{Binding AmbienteSelecionado}"></ComboBox>
+
+                <CheckBox x:Name="ChkIsCompilar" VerticalAlignment="Center"   
+                          Grid.Column="1" 
+                          HorizontalAlignment="Center" Margin="10 0"
                           Foreground="{DynamicResource {x:Static vsshell:VsBrushes.WindowTextKey}}">Compilar</CheckBox>
+
+                <CheckBox x:Name="ChkIsNormalizarScript" 
+                          IsChecked="True" VerticalAlignment="Center"   
+                          Grid.Column="2" 
+                          HorizontalAlignment="Right"  Margin="10 0"
+                          Foreground="{DynamicResource {x:Static vsshell:VsBrushes.WindowTextKey}}">
+                    Normalizar script
+                </CheckBox>
                 <!--<ComboBox DisplayMemberPath="Nome" ItemsSource="{Binding Ambientes}" SelectedItem="{Binding AmbienteSelecionado}"></ComboBox>-->
 
                 <StackPanel Grid.ColumnSpan="2" 
@@ -98,6 +111,7 @@
         <ScrollViewer Grid.Row="1" x:Name="ScrollLog" HorizontalScrollBarVisibility="Visible"  VerticalScrollBarVisibility="Visible" Grid.ColumnSpan="2">
 
             <ItemsControl 
+                 Name="ItemsControl"
                           Margin="5" ItemsSource="{Binding Logs}"  
                           Background="{DynamicResource VsBrush.Window}"
                           Foreground="{DynamicResource VsBrush.WindowText}">
